--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "practice-node-typescript",
 	"version": "1.0.0",
 	"description": "Practice NodeJS TypeScript",
-	"main": "src/index.js",
+	"main": "src/index.ts",
 	"scripts": {
-		"start": "nodemon src/index.js",
+		"start": "nodemon src/index.ts",
 		"update-deps": "npx npm-check-updates -u && npm install",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -15,6 +15,12 @@
 	"license": "MIT",
 	"homepage": "https://github.com/huynhducthanhtuan/practice-node-typescript#readme",
 	"dependencies": {
+		"@types/cookie-parser": "^1.4.3",
+		"@types/express": "^4.17.15",
+		"@types/jsonwebtoken": "^9.0.1",
+		"@types/node": "^18.11.18",
+		"@types/swagger-jsdoc": "^6.0.1",
+		"@types/swagger-ui-express": "^4.1.3",
 		"bcrypt": "^5.1.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
@@ -31,9 +37,14 @@
 		"nodemon": "^2.0.20",
 		"swagger-jsdoc": "^6.2.7",
 		"swagger-ui-express": "^4.6.0",
+		"typescript": "^4.9.4",
 		"util": "^0.12.5"
 	},
 	"engines": {
 		"node": "v18.12.1"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.13",
+		"@types/morgan": "^1.9.4"
 	}
 }
