--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"main": "src/index.ts",
 	"scripts": {
 		"start": "nodemon src/index.ts",
-		"update-deps": "npx npm-check-updates -u && npm install",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"update-deps": "npx npm-check-updates -u && npm install"
 	},
 	"keywords": [
 		"practice-node-typescript"
@@ -15,28 +14,23 @@
 	"license": "MIT",
 	"homepage": "https://github.com/huynhducthanhtuan/practice-node-typescript#readme",
 	"dependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.15",
 		"@types/jsonwebtoken": "^9.0.1",
+		"@types/lodash": "^4.14.191",
+		"@types/mongoose-sequence": "^3.0.7",
 		"@types/node": "^18.11.18",
+		"@types/nodemailer": "^6.4.7",
 		"@types/swagger-jsdoc": "^6.0.1",
 		"@types/swagger-ui-express": "^4.1.3",
-		"bcrypt": "^5.1.0",
-		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
 		"express-validator": "^6.14.2",
 		"google-auth-library": "^8.7.0",
-		"jsonwebtoken": "^9.0.0",
-		"lodash": "^4.17.21",
 		"mongoose": "^6.8.3",
-		"mongoose-sequence": "^5.3.1",
 		"morgan": "^1.10.0",
-		"nodemailer": "^6.9.0",
 		"nodemon": "^2.0.20",
-		"swagger-jsdoc": "^6.2.7",
-		"swagger-ui-express": "^4.6.0",
 		"typescript": "^4.9.4",
 		"util": "^0.12.5"
 	},
