--- a/package.json
+++ b/package.json
@@ -16,29 +16,34 @@
 	"dependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.13",
+		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.15",
+		"@types/express-validator": "^3.0.0",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/lodash": "^4.14.191",
+		"@types/mongoose": "^5.11.97",
 		"@types/mongoose-sequence": "^3.0.7",
+		"@types/morgan": "^1.9.4",
 		"@types/node": "^18.11.18",
 		"@types/nodemailer": "^6.4.7",
+		"@types/nodemon": "^1.19.2",
 		"@types/swagger-jsdoc": "^6.0.1",
 		"@types/swagger-ui-express": "^4.1.3",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
-		"express-validator": "^6.14.2",
+		"express": "^4.18.2",
 		"google-auth-library": "^8.7.0",
-		"mongoose": "^6.8.3",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.9.0",
 		"nodemon": "^2.0.20",
+		"swagger-jsdoc": "^6.2.7",
+		"swagger-ui-express": "^4.6.0",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4",
 		"util": "^0.12.5"
 	},
 	"engines": {
 		"node": "v18.12.1"
-	},
-	"devDependencies": {
-		"@types/cors": "^2.8.13",
-		"@types/morgan": "^1.9.4"
 	}
 }
