--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Practice NodeJS TypeScript",
 	"main": "src/index.ts",
 	"scripts": {
-		"start": "nodemon src/index.ts",
+		"start": "nodemon",
 		"update-deps": "npx npm-check-updates -u && npm install"
 	},
 	"keywords": [
