--- a/src/swagger/forgotPassword.yaml
+++ b/src/swagger/forgotPassword.yaml
@@ -19,9 +19,9 @@
                             email: "hieuhn@gmail.com"
         responses:
             200:
-                description: Submit email successfully
+                description: Successfully
             400:
-                description: Submit email failed
+                description: Failed
             404:
                 description: Not found
 
@@ -48,9 +48,9 @@
                             code: "123456"
         responses:
             200:
-                description: Submit code successfully
+                description: Successfully
             400:
-                description: Submit code failed
+                description: Failed
 
 /forgot-password/resend-code:
     post:
@@ -71,9 +71,9 @@
                             email: "hieuhn@gmail.com"
         responses:
             200:
-                description: Resend code successfully
+                description: Successfully
             400:
-                description: Resend code failed
+                description: Failed
 
 /forgot-password/create-new-password:
     post:
@@ -102,6 +102,6 @@
                             confirmPassword: "12345678"
         responses:
             200:
-                description: Create new password successfully
+                description: Successfully
             400:
-                description: Create new password failed
+                description: Failed
