--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
 	"main": "src/index.ts",
 	"scripts": {
 		"start": "nodemon",
+		"lint": "tslint -c tslint.json -p tsconfig.json",
 		"update-deps": "npx npm-check-updates -u && npm install"
 	},
 	"keywords": [
-		"practice-node-typescript"
+		"practice-node-typescript",
+		"javascript-es6"
 	],
 	"author": "huynhducthanhtuan",
 	"license": "MIT",
@@ -30,16 +32,20 @@
 		"@types/nodemon": "^1.19.2",
 		"@types/swagger-jsdoc": "^6.0.1",
 		"@types/swagger-ui-express": "^4.1.3",
+		"bcrypt": "^5.1.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"google-auth-library": "^8.7.0",
+		"jsonwebtoken": "^9.0.0",
+		"mongoose-sequence": "^5.3.1",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.0",
 		"nodemon": "^2.0.20",
 		"swagger-jsdoc": "^6.2.7",
 		"swagger-ui-express": "^4.6.0",
 		"ts-node": "^10.9.1",
+		"tslint": "^6.1.3",
 		"typescript": "^4.9.4",
 		"util": "^0.12.5"
 	},
